# new-info.github.io

./: .gitignore  404.html  AUTO_DECRYPT_GUIDE.md  COMMANDS.md  CROSS_AUTH_RESTORE_SUMMARY.md  DEPLOYMENT.md  ENCRYPTION_GUIDE.md  EXPENSES_AMOUNT_HIDDEN_FEATURE.md  EXPENSES_STRIKETHROUGH_FEATURE.md  INCREMENTAL_ENCRYPTION_GUIDE.md  LICENSE  MIGRATION_COMPLETE.md  PROJECT_SUMMARY.md  README.md  SECURITY_CONFIG.md  SECURITY_MIGRATION_SUMMARY.md  TUTORIAL.md  UPDATED_SCRIPTS_GUIDE.md  VERSION_UPDATE_GUIDE.md  VOUCHER_COMMANDS.md  VOUCHER_SYSTEM_GUIDE.md  index.html  manifest.json  package.json  sw.js  viewer.html
2025/hjf/: 2025年6月23日-review.html  2025年6月23日.html  2025年7月10日-review.html  2025年7月10日.html  2025年7月9日-review.html  2025年7月9日.html
2025/hjm/: 2025年6月22日-review.html  2025年6月22日.html  2025年6月29日-review.html  2025年6月29日.html  2025年7月13日-review.html  2025年7月13日.html  2025年7月20日-review.html  2025年7月20日.html  2025年7月27日-review.html  2025年7月27日.html  2025年7月6日-review.html  2025年7月6日.html
about/: index.html
archives/: index.html
assets/css/: main.css  mobile.css  pwa-enhancements.css  task-rewards.css
assets/data/: README.md  expenses-records.js  (+1 more)
assets/wasm/: Cargo.toml  xor_crypto.js  xor_crypto_bg.wasm
assets/wasm/src/: lib.rs
categories/: index.html
docs/: NOTIFICATION_OPTIMIZATION.md  PWA_ENHANCEMENTS.md
guide/: index.html
scripts/: README.md  create-icons.js  demo.js  dev-with-scan.js  encrypt-html.js  encrypt-vouchers.js  manage-patches.js  scan-files.js  scan-notes.js
study/: index.html
tags/: index.html
vouchers/: .gitignore  README.md
(+46 files in other folders)
