[package]
name = "xor_crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[features]
default = ["console_error_panic_hook"]
